--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ReservasAulas-v3</name>
+	<name>ReservasAulas-v3N</name>
 	<comment>Project ReservasAulas-V2 created by Buildship.</comment>
 	<projects>
 	</projects>
